--- a/Clase 5/index.html
+++ b/Clase 5/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+
+    <ul id="personas"></ul>
     <script src="funciones.js"></script>
 </body>
 </html>
