--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
 
             </form>
         </section>
+       <section id="resultado" class="section-container">
+        <table id="resultadoCotizaciones"class="table">
+
+        </table>
+       </section>
+        
+
     </main>
 
     <script src="js/cotizador.js"></script>
@@ -114,6 +121,7 @@
         </div>
     </footer>
     <!--Fin Footer-->
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
