--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
             </form>
         </section>
-       <section id="resultado" class="section-container">
+       <section id="resultado" class="section-container resultado">
         <table id="resultadoCotizaciones"class="table">
 
         </table>
