Modularizar código JS

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     </main>
 
-    <script src="js/cotizador.js"></script>
+    
     <!--Footer-->
     <footer>
         <div class="footer-container">
@@ -126,7 +126,8 @@
         </div>
     </footer>
     <!--Fin Footer-->
-
+    <script type="module" src="js/modelo.js"></script>
+    <script type="module" src="js/cotizador.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
