Ajustes formulario, se agrega select option dinámico

--- a/index.html
+++ b/index.html
@@ -63,11 +63,15 @@
             <form id="formCotizacion" class="section-container__form" action="#">
                 <div>
                     <label for="marca">Marca</label>
-                    <input type="text" name="marca" id="marca" placeholder="Ej. Ford (*)" required>
+                    <select name="marca" id="marca" required>
+                        
+                    </select>                    
                 </div>
                 <div>
                     <label for="modelo">Modelo</label>
-                    <input type="text" name="modelo" id="modelo" placeholder="Ej. Focus (*)" required>
+                    <select name="modelo" id="modelo" required>
+                        
+                    </select>                
                 </div>
                 <div>
                     <label for="year">Año</label>
