Se añade librería toastify

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <meta property="twitter:image" content="URL_DE_LA_IMAGEN_DE_TU_SITIO_AQUÍ" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -131,6 +132,7 @@
     </footer>
     <!--Fin Footer-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="js/modelo.js"></script>
     <script type="module" src="js/cotizador.js"></script>    
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
