Se añaden archivos BD con utilización de JSON y localstorageN

--- a/index.html
+++ b/index.html
@@ -98,9 +98,7 @@
         </section>
 
 
-    </main>
-
-    
+    </main>    
     <!--Footer-->
     <footer>
         <div class="footer-container">
@@ -133,8 +131,10 @@
     <!--Fin Footer-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script type="module" src="js/modelo.js"></script>
-    <script type="module" src="js/cotizador.js"></script>    
+    <script type="module" src="./db/vehiculos.js"></script>
+    <script type="module" src="./db/planes.js"></script>
+    <script type="module" src="./js/modelo.js"></script>
+    <script type="module" src="./js/cotizador.js"></script>    
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
